--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,12 @@
   "main": "language-component.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
-    "paper-button": "PolymerElements/paper-button#2.1.3"
+    "paper-button": "PolymerElements/paper-button#2.1.3",
+    "iron-ajax": "PolymerElements/iron-ajax#2.1.3",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#2.1.0",
+    "paper-listbox": "PolymerElements/paper-listbox#2.1.1",
+    "paper-item": "PolymerElements/paper-item#2.1.1",
+    "paper-toast": "PolymerElements/paper-toast#2.1.2"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
